clear local storage when updating

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 	let newWorker;
 	// The click event on the notification
 	document.getElementById('reload').addEventListener('click', function(){
+		localStorage.clear();
 		newWorker.postMessage({ action: 'skipWaiting' });
 	});
 
