add tracking for page speed

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 		loadingDiv.innerHTML = 'Loading ' + resource;
 		loadingDiv.style.width = percentage + '%';
 	};
+	var timer = new Date();
 </script>
 
 <!-- libs -->
