--- a/index.html
+++ b/index.html
@@ -115,6 +115,14 @@
 <script src="data/lemmas.js"></script>
 <script src="data/literalConsistentExtra.js"></script>
 <script>loadingStatus( 'interface', 95 );</script>
+<script type="text/javascript">
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-51039438-1', 'javascripture.org');
+  ga('send', 'pageview');
+</script>
 <script src="build/bundle.js"></script>
 <script>
 	// Handler for messages coming from the service worker
@@ -187,28 +195,5 @@
 			document.getElementById( 'loading' ).innerHTML = e.data.html;
 		}
 	}, false );
-
-	// Check if a new cache is available on page load.
-	/*worker.addEventListener('load', function(e) {
-		window.applicationCache.addEventListener('updateready', function(e) {
-			if (window.applicationCache.status == window.applicationCache.UPDATEREADY) {
-				// Browser downloaded a new app cache.
-				localStorage.clear();
-				var r = confirm( 'A new version of JavaScripture is available. Press OK to reload and use it.' );
-				if ( r == true ) {
-					window.location.reload();
-				}
-			}
-		}, false);
-	}, false);*/
-</script>
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-51039438-1', 'javascripture.org');
-  ga('send', 'pageview');
 </script>
 </html>
