--- a/index.html
+++ b/index.html
@@ -111,9 +111,10 @@
 <script>loadingStatus( 'cross references', 80 );</script>
 <script src="data/crossReferences.js"></script>
 <script>loadingStatus( 'Literal Consistent', 90 );</script>
-<script src="data/literalConsistent.js"></script>
-<script src="data/lemmas.js"></script>
-<script src="data/literalConsistentExtra.js"></script>
+<script src="data/LC.js"></script>
+<script>
+	javascripture.data.LC = literalConsistent;
+</script>
 <script>loadingStatus( 'interface', 95 );</script>
 <script type="text/javascript">
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
