--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<div class="errors">
 			<div id="loading" class="loading">Loading...</div>
 			<br /><br />
-			<p>If you can see this, something probably went wrong. <a href="/clear.html">Clear settings and start over</a>, <a href="https://ben.blog/contact/">Email me</a> or use <a href="https://javascripture.xyz">an older stable version</a>.</p>
+			<p>If you can see this, something probably went wrong. <a href="javascript:clear()">Clear settings and start over</a>, <a href="https://ben.blog/contact/">Email me</a> or use <a href="https://javascripture.xyz">an older stable version</a>.</p>
 		</div>
 		<div id="content">
 			<div class="full-page">
@@ -60,7 +60,7 @@
 						</div>
 					</div>
 					<div class="features">
-						<p>Having problems? <a href="http://scruffian.wordpress.com/contact/">Email me</a>, <a href="/clear.html">Clear settings and start over</a> or use <a href="https://javascripture.xyz">an older stable version</a>.</p>
+						<p>Having problems? <a href="http://scruffian.wordpress.com/contact/">Email me</a>, <a href="javascript:clear()">Clear settings and start over</a> or use <a href="https://javascripture.xyz">an older stable version</a>.</p>
 					</div>
 				</div>
 			</div>
@@ -84,6 +84,10 @@
 		loadingDiv.style.width = percentage + '%';
 	};
 	var timer = new Date();
+
+	function clear() {
+		localStorage.clear();window.location.href="/";
+	}
 </script>
 
 <!-- libs -->
