--- a/comparison-chart.html
+++ b/comparison-chart.html
@@ -5,13 +5,14 @@
 		<script src="data/bible.js"></script>
 		<script src="data/morphhb.js"></script>
 		<script src="data/tischendorf.js"></script>
+		<script src="map/lodash.min.js"></script>
 		<script>
 			var javascripture = { data: {} };
 			var data = Object.assign( {}, morphhb, tischendorf );
 		</script>
 		<script src="data/strongsObjectWithFamilies2.js"></script>
 		<script>
-
+			var strongs = javascripture.data.strongsObjectWithFamilies;
 const getNumberOfUsesOfLemma = ( lemmaToFind, reference ) => {
 	const numberOfUses = data[ reference.book ][ reference.chapter - 1 ].map( verse => {
 		return verse.map( word => {
@@ -20,6 +21,20 @@ const getNumberOfUsesOfLemma = ( lemmaToFind, reference ) => {
 	} ).flat()
 
 	return numberOfUses.length;
+}
+
+const getNumberOfWordsInReference = ( reference ) => {
+	const numberOfWordsArray = data[ reference.book ][ reference.chapter - 1 ].map( verse => {
+		return verse.length
+	} );
+
+	if ( numberOfWordsArray.length > 0 ) {
+		return numberOfWordsArray.reduce( ( total, uses ) => {
+			return total + uses;
+		} );
+	}
+
+	return 0;
 }
 
 const getLemmasForReference = ( reference ) => {
@@ -65,29 +80,48 @@ const calculateConnectionQuality = ( reference, referenceToCompareWith ) => {
 	const averageLengthOfReference = ( numberOfWordsInReference1 + numberOfWordsInReference1 ) / 2
 	const comparison = compareTwoReferences( reference, referenceToCompareWith );
 	const numberOfConnections = comparison ? comparison.length : 0;
+	const totalNumberOfWordsInBothReferences = getNumberOfWordsInReference( reference ) + getNumberOfWordsInReference( referenceToCompareWith );
 
 	// for each connection determine the significance, density and uniqueness
 	// significance (%age) = number of connections divided by the number of words in the passages (an average of the two passage?)
 	const significance = ( numberOfConnections / averageLengthOfReference ) * 100;
 	// density (%age) = the number of times the word is used in each chapter multiplied
-	totalConnectionsBetweenPassages = comparison.map( lemma => {
+
+	let totalConnectionsBetweenPassages = 0;
+	const totalConnectionsBetweenPassagesArray = comparison.map( lemma => {
 		return getNumberOfUsesOfLemma( lemma, reference ) * getNumberOfUsesOfLemma( lemma, referenceToCompareWith );
 		//const result = {}
 		//result[ lemma ] = getNumberOfUsesOfLemma( lemma, reference ) * getNumberOfUsesOfLemma( lemma, referenceToCompareWith );
 		//return result;
-	} ).reduce( ( total, uses ) => {
-		return total + uses;
 	} );
-	const density = totalConnectionsBetweenPassages / averageLengthOfReference;
+
+	if ( totalConnectionsBetweenPassagesArray.length ) {
+		totalConnectionsBetweenPassages = totalConnectionsBetweenPassagesArray.reduce( ( total, uses ) => {
+			return total + uses;
+		} );
+	}
+	// 100% would be that every word was used in both passages
+	// 0% would be no connections
+	// So we need to find the percentage of words that are conneted
+	// That means we need all the lemmas that are con
+	const density = totalConnectionsBetweenPassages / totalNumberOfWordsInBothReferences;
 	// uniqueness = the number of uses of the word elsewhere
 	// the most common word is used 50986 times
 	// divide by the number of uses of the word
-	const significanceOfConnections = comparison.map( lemma => {
-		return 1 / ( strongs[ lemma ].count * strongs[ lemma ].count );
-	} ).reduce( ( total, uses ) => {
-		return total + uses;
+	let significanceOfConnections = 360;
+	const significanceOfConnectionsArray = comparison.map( lemma => {
+		// get the total times the word is used in both references
+		const totalUsesInBothReferences = getNumberOfUsesOfLemma( lemma, reference ) + getNumberOfUsesOfLemma( lemma, referenceToCompareWith );
+		return ( strongs[ lemma ].count / 50986 ) * 360;// / totalUsesInBothReferences;
+		//return 1 / ( strongs[ lemma ].count * strongs[ lemma ].count );
 	} );
-	const uniqueness = significanceOfConnections * 1000;
+	if ( significanceOfConnectionsArray.length ) {
+		significanceOfConnections = significanceOfConnectionsArray.reduce( ( total, uses ) => {
+			return total + uses;
+		} );
+	}
+
+	const uniqueness = significanceOfConnections / numberOfConnections;
 
 	return {
 		reference,
@@ -101,8 +135,8 @@ const calculateConnectionQuality = ( reference, referenceToCompareWith ) => {
 const getColorsFromConnectionQuality = ( { significance, density, uniqueness } ) => {
 	const lightness = significance;
 	const saturation = density * 10; // just a guess
-	const hue = 300 - uniqueness;
-	console.log( 'hsl(' + hue + ',' + saturation + '%,' + lightness + '%)' );
+	const hue = uniqueness;
+//	console.log( 'hsl(' + hue + ',' + saturation + '%,' + lightness + '%)' );
 	return 'hsl(' + hue + ',' + saturation + '%,' + lightness + '%)';
 };
 
@@ -110,34 +144,86 @@ const getColor = ( ref1, ref2 ) => {
 	const quality = calculateConnectionQuality( ref1, ref2 );
 	return getColorsFromConnectionQuality( quality );
 };
+
+
 		</script>
 		<style>
-			table {
-				border-collapse: collapse;
-				border-spacing: 0;
+			body {
+				background: black;
+				color: white;
+				font-family: Arial, Helvetica, sans-serif;
+				font-size: 10px;
 				margin: 0;
 				padding: 0;
 			}
-			td {
-				width: 1px;
-				height: 1px;
+			div {
+				display: flex;
+			}
+			span {
+				color: black;
+				line-height: 20px;
+				text-align: center;
+			}
+			.book-name {
+				color: white;
+				height: 20px;
+				width: 100px;
+				text-align: left;
 			}
 		</style>
 	</head>
 	<body>
-		<div id="table"></div>
+		<form class="form">
+			<select name="book" id="book">
+				<option>Select book</option>
+			</select>
+			<select name="chapter" id="chapter">
+				<option>-</option>
+			</select>
+		</form>
+		<section id="table"></section>
 	</body>
 	<script>
-		const count = [];
+document.getElementById( 'book' ).innerHTML = (
+	document.getElementById( 'book' ).innerHTML +
+	bible.Data.books.map( book => '<option>' + book[0] + '</option>' )
+);
+
+document.getElementById( 'book' ).onchange = ( event ) => {
+	const bookName = document.getElementById( 'book' ).value;
+	const bookNumber = bible.getBookId( bookName );
+	document.getElementById( 'chapter' ).innerHTML = (
+		'<option>Select a chapter</option>' +
+		bible.Data.verses[ bookNumber - 1 ].map( ( verses, index ) => '<option>' + ( index + 1 ) + '</option>' )
+	);
+	document.getElementById( 'verse' ).innerHTML = (
+		'<option>-</option>'
+	);
+};
+
+document.getElementById( 'chapter' ).onchange = ( event ) => {
+	const bookName = document.getElementById( 'book' ).value;
+	const bookNumber = bible.getBookId( bookName );
+	const chapterNumber = document.getElementById( 'chapter' ).value;
+	createChart( { book: bookName, chapter: chapterNumber } );
+};
+
+
+function createChart( ref ) {
+	const content = bible.Data.allBooks.map( bookName => {
+		let book = '<div><span class="book-name">' + bookName + '</span>';
+		book += data[ bookName ].map( ( chapter, chapterNumber ) => {
+			const chapterNumberReal = chapterNumber + 1;
+			return '<span style="background: ' + getColor( ref, { book: bookName, chapter: chapterNumberReal } ) + '">' + chapterNumberReal + '</span>';
+		} ).join('');
+		book += '</div>';
+		return book;
+	} ).join('');
+	document.getElementById('table').innerHTML = content;
+}
+
+/*		const count = [];
 		const strongs = javascripture.data.strongsObjectWithFamilies;
-		/*Object.keys( strongs ).map( key => {
-			count.push( {
-				number: key,
-				count: strongs[ key ].count,
-			} );
-		});
-		const sorted = _.orderBy( count, ['count'], ['desc']);
-		console.log( sorted );*/
 		let chart = '<table>';
 		chart += bible.Data.books.map( ( book, index ) => {
 			return bible.Data.verses[ index ].map( ( chapterArray, chapterNumber ) => {
@@ -152,10 +238,6 @@ const getColor = ( ref1, ref2 ) => {
 					};
 					//const color = calculateConnectionQuality( reference, referenceToCompareWith ) * 360;
 					const color = '50';
-					//return '<td style="background: hsl(' + color + ', 50%, 50%)" title="'+book[ 0 ]+ ' ' + ( chapterNumber + 1 ) + ' <-> ' + bookToCompareWith[ 0 ] + ' 1"></td>';
-					/*return bible.Data.verses[ index ].map( ( chapterToCompareWith, chapterNumberToCompareWith ) => {
-						return '<td title="'+book[ 0 ]+ ':' + ( chapterNumber + 1 ) + ' <-> ' + bookToCompareWith[ 0 ] + ':' + ( chapterNumberToCompareWith + 1 ) + '"></td>';
-					} ).join('');*/
 				} ).join('');
 				chapters += '</tr>';
 				return chapters;
@@ -194,17 +276,6 @@ const getColor = ( ref1, ref2 ) => {
 		console.log( calculateConnectionQuality( ref1, ref1 ) );
 		console.log( calculateConnectionQuality( ref5, ref6 ) );
 
-		/*https://stackoverflow.com/questions/35816179/calculation-algorithm-to-mix-3-hsl-colors
-		var x = Math.cos(hue / 180 * Math.PI) * saturation;
-		var y = Math.sin(hue / 180 * Math.PI) * saturation;
-		var z = lightness;
-
-		var h= Math.atan2(y, x) * 180 / Math.PI;
-		var s = Math.sqrt(x * x + y * y);
-		var l = z;
-
-		console.log( 'hsl('+h+','+s+'%,'+l+'%)' );*/
-	//	document.body.style.backgroundColor = getColor( ref2, ref6 );
 
 		var result = '';
 		result += '<div>';
@@ -213,6 +284,6 @@ const getColor = ( ref1, ref2 ) => {
 				return '<div style="background:' + getColor( mappedRef1, mappedRef2 ) + '">' + mappedRef1.book + mappedRef1.chapter + '->' + mappedRef2.book + mappedRef2.chapter + '</div>';
 			} ).join('');
 		} ).join('');
-		document.getElementById( 'table' ).innerHTML = result;
+		document.getElementById( 'table' ).innerHTML = result;*/
 	</script>
 </html>
