--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 <script>loadingStatus( 'Libraries', 10 );</script>
 <script src="lib/MorphCodes.js"></script>
 <script src="lib/MorphParse.js"></script>
+<script src="lib/morphgnt-parse.js"></script>
 <script>loadingStatus( 'data', 20 );</script>
 <script src="data/bible.js"></script>
 <script>loadingStatus( 'Dictonary', 23 );</script>
