update help a bit

--- a/index.html
+++ b/index.html
@@ -35,9 +35,15 @@
 	</head>
 	<body>
 		<div class="errors">
-			<div id="loading" class="loading">Loading...</div>
-			<br /><br />
-			<p>If you can see this, something probably went wrong. <a href="javascript:clear()">Clear settings and start over</a>, <a href="https://ben.blog/contact/">Email me</a> or use <a href="https://javascripture.xyz">an older stable version</a>.</p>
+			<h1>Sorry :(</h1>
+			<br />
+			<p>If you can see this, something probably went wrong. <a href="javascript:clear()">Clear settings and start over</a>, <a href="https://ben.blog/contact/">Email me</a>.
+			<br />
+			<br />
+			<p>There are also old versions available in case this one is broken:<br />
+				<br />
+				<a href="https://javascripture.net">javascripture.net</a> | <a href="https://javascripture.xyz">javascripture.xyz</a><br />
+			</p>
 		</div>
 		<div id="content">
 			<div class="full-page">
@@ -49,7 +55,7 @@
 							<p>JavaScripture is a tool to help you understand the bible better.</p>
 							<script>
 								if ( localStorage ) {
-									document.write( '<p class="installation-info">Once the scripts have loaded, they will be cached, so the app will work offline.</p>' );
+									document.write( '<p class="installation-info"><br />Once the scripts have loaded, they will be cached, so the app will work offline.</p>' );
 								}
 							</script>
 						</div>
@@ -60,7 +66,11 @@
 						</div>
 					</div>
 					<div class="features">
-						<p>Having problems? <a href="http://scruffian.wordpress.com/contact/">Email me</a>, <a href="javascript:clear()">Clear settings and start over</a> or use <a href="https://javascripture.xyz">an older stable version</a>.</p>
+						<p>Having problems? <a href="http://scruffian.wordpress.com/contact/">Email me</a>, <a href="javascript:clear()">Clear settings and start over</a></p>
+						<p>There are also old versions available in case this one is broken:<br />
+							<br />
+							<a href="https://javascripture.net">javascripture.net</a> | <a href="https://javascripture.xyz">javascripture.xyz</a><br />
+						</p>
 					</div>
 				</div>
 			</div>
