refacor to functional components

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 						<p>Having problems? <a href="http://scruffian.wordpress.com/contact/">Email me</a>, <a href="javascript:clear()">Clear settings and start over</a></p>
 						<p>There are also old versions available in case this one is broken:<br />
 							<br />
-							<a href="https://javascripture.net">javascripture.net</a> | <a href="https://javascripture.xyz">javascripture.xyz</a><br />
+							<a href="https://javascripture.net">javascripture.net</a><br />
+							<a href="https://javascripture.xyz">javascripture.xyz</a><br />
 						</p>
 					</div>
 				</div>
