--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 <script src="data/strongsObjectWithFamilies2.js"></script>
 <script>loadingStatus( 'cross references', 80 );</script>
 <script src="data/crossReferences.js"></script>
+<script src="data/cdrplan.min.js"></script>
 <script>loadingStatus( 'Literal Consistent', 90 );</script>
 <script src="data/LC.js"></script>
 <script>
