Fix textual issues in the greek

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <script>javascripture.data.hebrew=morphhb</script>
 <script>loadingStatus( 'Greek', 60 );</script>
 <script src="data/tischendorf.js"></script>
-<script>javascripture.data.greek=tischendorf</script>
+<script>javascripture.data.greek=tischendorf.books</script>
 <script>loadingStatus( 'Strongs', 70 );</script>
 <script src="data/strongsObjectWithFamilies2.js"></script>
 <script>loadingStatus( 'cross references', 80 );</script>
